# urirun-connector-linkedin

./: .gitignore  LICENSE  NOTICE  README.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
docs/: oauth-setup.md
scripts/: ci_urirun_llm_smoke.py  linkedin_oauth.sh
scripts/oauth-web/: config.sample.php  index.php
tests/: test_contracts.py  test_linkedin.py
urirun_connector_linkedin/: __init__.py  connector.manifest.json  contracts.py  core.py
