[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-linkedin"
version = "0.1.0"
description = "LinkedIn connector for ifuri and urirun — publish posts, read profile, list feed over the official LinkedIn API (linkedin:// URI routes)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
urirun-connector-linkedin = "urirun_connector_linkedin.core:main"

[project.entry-points."urirun.bindings"]
linkedin = "urirun_connector_linkedin.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_linkedin*"]

[tool.setuptools.package-data]
urirun_connector_linkedin = ["connector.manifest.json"]
